--- a/src/views/DashboardScreen.form
+++ b/src/views/DashboardScreen.form
@@ -89,7 +89,9 @@
                       <Component id="btnContract" min="-2" pref="84" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                       <Component id="btnLaborCharge" min="-2" pref="88" max="-2" attributes="0"/>
-                      <EmptySpace pref="551" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                      <Component id="btnReport" min="-2" pref="88" max="-2" attributes="0"/>
+                      <EmptySpace pref="436" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -98,13 +100,16 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="btnLaborCharge" pref="0" max="32767" attributes="0"/>
-                          <Component id="btnContract" pref="0" max="32767" attributes="0"/>
-                          <Component id="btnCustomer" pref="0" max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="btnMaterial" min="-2" pref="84" max="-2" attributes="0"/>
-                              <Component id="btnLabor" min="-2" pref="84" max="-2" attributes="0"/>
-                              <Component id="btnQuotation" min="-2" pref="84" max="-2" attributes="0"/>
+                          <Component id="btnReport" pref="0" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="btnLaborCharge" pref="0" max="32767" attributes="0"/>
+                              <Component id="btnContract" pref="0" max="32767" attributes="0"/>
+                              <Component id="btnCustomer" pref="0" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="btnMaterial" min="-2" pref="84" max="-2" attributes="0"/>
+                                  <Component id="btnLabor" min="-2" pref="84" max="-2" attributes="0"/>
+                                  <Component id="btnQuotation" min="-2" pref="84" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="14" max="32767" attributes="0"/>
@@ -204,6 +209,22 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLaborChargeActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="btnReport">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/appResources/report.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+                  <ResourceString bundle="appResources/Strings.properties" key="Labor_Charge_Menu_Caption" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+                </Property>
+                <Property name="toolTipText" type="java.lang.String" value=""/>
+                <Property name="horizontalTextPosition" type="int" value="0"/>
+                <Property name="verticalTextPosition" type="int" value="3"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnReportActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
