--- a/src/views/RegistrationScreen.form
+++ b/src/views/RegistrationScreen.form
@@ -380,7 +380,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="1202" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="1202" max="-2" attributes="0"/>
                   <Component id="btnBack" min="-2" pref="51" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnSave" min="-2" pref="51" max="-2" attributes="0"/>
@@ -396,7 +396,7 @@
                       <Component id="btnBack" alignment="0" min="-2" pref="51" max="-2" attributes="0"/>
                       <Component id="btnSave" alignment="0" min="-2" pref="51" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
